--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,21 @@ img {
   border-radius:8px;
 }
 
+.contact-container {
+  background-image:url(../images/bg_1.jpg);
+  background-position: center center;
+  background-size: auto;
+  background-attachment: fixed;
+  padding-top:70px;
+  padding-bottom:70px;
+  width:100%;
+}
+
+.contact-content {
+  background-color: rgba(255, 255, 255, 0.9);
+  padding:100px;
+}
+
 footer {
   padding-top:30px;
   padding-bottom:30px;
